# iis-project-template-python

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  copier.yaml  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt
docs/assets/: references.bib
docs/developer-guide/: documentation.md
docs/developer-guide/template/: Calculated Variables.md  index.md
docs/reference/: terms.md
docs/reference/tooling/: cspell.md  git.md  ruff.md  sphinx.md
docs/user-guide/: first-project.md  getting-started.md  next-steps.md  task-execution.md
docs/user-guide/documentation/: index.md  mkdocs.md
docs/user-guide/setup/: index.md
docs/user-guide/topics/: documentation.md
docs/util/: macros.py
extensions/: context.py
main/: 404.html  index.html  sitemap.xml
main/_nav/: index.html
main/developer-guide/documentation/: index.html
main/developer-guide/examples/: index.html
main/developer-guide/release/: index.html
main/developer-guide/supported-remotes/: index.html
main/developer-guide/template/: index.html
main/developer-guide/template-in-package/: index.html
main/examples/default/: index.html  mkdocs.yml
main/examples/full/: index.html
main/examples/gitlab/: index.html  mkdocs.yml  pyproject.toml
main/examples/minimal/: Makefile  index.html  pyproject.toml
main/examples/mkdocs/: index.html
main/examples/sphinx/: index.html
main/reference/changelog/: index.html
main/reference/terms/: index.html
main/reference/tooling/: index.html
main/search/: search_index.json
main/user-guide/first-project/: index.html
main/user-guide/getting-started/: index.html
main/user-guide/next-steps/: index.html
src/init_python_project/: cli.py
template/: CHANGELOG.md.jinja  Makefile.jinja  README.md.jinja  pyproject.toml.jinja  {% if docs == 'mkdocs' %}mkdocs.yml{% endif %}.jinja  {% if platform == 'gitlab' %}.gitlab-ci.yml{% endif %}.jinja  {% if precommit %}.pre-commit-config.yaml{% endif %}.jinja  {% if remote.startswith('gitlab') %}.gitlab-ci.yml{% endif %}.jinja  {% if use_cspell %}cspell.json{% endif %}.jinja  {% if use_cspell %}project-terms.txt{% endif %}.jinja
template/{% if docs == 'mkdocs' %}docs{% endif %}/: requirements.txt
template/{% if docs == 'sphinx' and docs_template=='none' %}docs{% endif %}/: requirements.txt
tests/: test_context.py  test_package.py  test_template.py
(+44 files in other folders)
